--- a/src/app/subdivision/worksheet/worksheet.component.html
+++ b/src/app/subdivision/worksheet/worksheet.component.html
@@ -30,27 +30,52 @@
         <div class="frame ribbed-white" id="lvsheet">
           <div class="grid">
               <div class="row cells2">
-                  <div class="cell debug">
+                  <div class="cell">
                       <div class="form-group">
                           <label class="col-md-2 control-label">Street</label>
-                          <div class="col-md-4">
-                            <input ng-disabled="lvrights" type="text" class="form-control ng-pristine ng-untouched ng-valid ng-empty" name="street" capitalize="">
+                          <br>
+                          <div class="input-control text full-size">
+                              <input type="text" [(ngModel)]="name" >
                           </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-2 control-label">Low</label>
-                            <div class="col-md-4">
-                              <input ng-disabled="lvrights" type="text" ng-model="low" class="form-control ng-pristine ng-untouched ng-valid ng-empty" name="low" valid-number="">
+                            <br>
+                            <div class="input-control text full-size">
+                                <input type="text" [(ngModel)]="low">
                             </div>
                           </div>
                           <div class="form-group">
                               <label class="col-md-2 control-label">High</label>
-                              <div class="col-md-4">
-                                <input ng-disabled="lvrights" type="text" ng-model="high" class="form-control ng-pristine ng-untouched ng-valid ng-empty" name="high" valid-number="">
+                              <br>
+                              <div class="input-control text full-size">
+                                  <input type="text" [(ngModel)]="high">
                               </div>
                             </div>
+                            <div class="form-group">
+                                <div >
+                                  <input  type="button" (click)="addStreet()" value="Insert" class="btn btn-primary">
+                                </div>
+                              </div>
                   </div>
-                  <div class="cell debug">2</div>
+                  <div class="cell">
+                      <table class="table">
+                          <thead>
+                            <tr>
+                              <th>Listed Street(s)</th>
+                              <th>Low</th>
+                              <th>High</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                              <tr *ngFor="let street of streets">
+                                  <td>{{street.name}}</td>
+                                  <td>{{street.low}}</td>
+                                  <td>{{street.high}}</td>
+                              </tr>
+                          </tbody>
+                        </table>
+                  </div>
                   
               </div>
           </div>
