added some changes

--- a/src/app/dashboard-tickets/dashboard-tickets.component.html
+++ b/src/app/dashboard-tickets/dashboard-tickets.component.html
@@ -11,7 +11,7 @@
                    <button (click)="fowardTicket(user)" class="button">Foward<i class="fa fa-rocket"></i></button>
                     {{user.first_name + " " + user.last_name}}
 
-                    <img class="pull-right" [src]="link + user.icon2" width="30" height="30" />
+                    <!-- <img class="pull-right" [src]="link + user.icon2" width="30" height="30" /> -->
                 </div>
             </div>  
         </div>
@@ -68,7 +68,7 @@
                   <div class="listview">
                     <div class="list" style="height: 100px;" (contextmenu)="onRightClick($event, customer)"  *ngFor="let customer of openTickets  | filtermine:searchAll" routerLink="/ticket/view/{{customer.id_ticket}}">
       
-                        <img class="list-icon" style="border-radius: 50%;" [src]="customer.icon" width="50" height="48"  alt="Avatar Badge"> 
+                        <!-- <img class="list-icon" style="border-radius: 50%;" [src]="customer.icon" width="50" height="48"  alt="Avatar Badge">  -->
                         <div style="float:left;">
                             <span >{{customer.staff}} | <b>{{(customer.created_date) ? customer.created_date : ''}}</b></span>
                             <br>
@@ -82,7 +82,7 @@
                         <div style="float:leaft">
                             <span class='place-right' style='text-align:center;'>
                            
-                                <img style="border-radius: 50%;" [src]="customer.icon_transfer" width="50" height="46"  alt="Avatar Badge"> 
+                                <!-- <img style="border-radius: 50%;" [src]="customer.icon_transfer" width="50" height="46"  alt="Avatar Badge">  -->
                              <br>
                              <label style="font-size:8px;">
                              {{customer.init}}
@@ -111,7 +111,7 @@
                 <div class="listview">
                   <div class="list" [ngClass]="{'inboxR': customer.total}" style="height: 100px;" (contextmenu)="onRightClick($event, customer)" *ngFor="let customer of inbox" routerLink="/ticket/view/{{customer.id_ticket}}">
                     <div style="float:left;">
-                        <img class="list-icon" style="border-radius: 50%;" src="assets/msg.png" width="50" height="48"  alt="Avatar Badge"> 
+                        <!-- <img class="list-icon" style="border-radius: 50%;" src="assets/msg.png" width="50" height="48"  alt="Avatar Badge">  -->
                       <br>
                         <span>{{customer.objectid}}</span>
                       <br>
@@ -124,7 +124,7 @@
                     <div style="float:leaft">
                       <span class='place-right' style='text-align:center;'>
                      
-                          <img style="border-radius: 50%;" [src]="customer.icon" width="50" height="50"  alt="Avatar Badge"> 
+                          <!-- <img style="border-radius: 50%;" [src]="customer.icon" width="50" height="50"  alt="Avatar Badge">  -->
                        <br>
                        <label style="font-size:8px;">
                         {{customer.initials}}
