--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -177,6 +177,9 @@
                                   <!--</button>-->
                                   
                                 </div>
+                                <div class="tab-content-segment">
+                                        <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LETTER)" class="button">LETTER</button>
+                                </div>
   
                             </div>
                             <div class="tab-group-caption">View</div>
