dashboard update icon

--- a/src/app/dashboard-tickets/dashboard-tickets.component.html
+++ b/src/app/dashboard-tickets/dashboard-tickets.component.html
@@ -68,7 +68,7 @@
                   <div class="listview">
                     <div class="list" style="height: 100px;" (contextmenu)="onRightClick($event, customer)"  *ngFor="let customer of openTickets  | filtermine:searchAll" routerLink="/ticket/view/{{customer.id_ticket}}">
       
-                        <!-- <img class="list-icon" style="border-radius: 50%;" [src]="customer.icon" width="50" height="48"  alt="Avatar Badge">  -->
+                        <img class="list-icon" style="border-radius: 50%;" [src]="customer.icon" width="50" height="48"  alt="Avatar Badge"> 
                         <div style="float:left;">
                             <span >{{customer.staff}} | <b>{{(customer.created_date) ? customer.created_date : ''}}</b></span>
                             <br>
