updates for spartan 3 bug fixes

--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -240,12 +240,12 @@
                 <label  >MSAG Comm</label>
                 <input uppercase [disabled]="lvSection" type="text"   [(ngModel)]="attributes.msag_comm" >
             </div>
-            <br>
+            <!-- <br>
             <br>
             <div class="input-control text full-size">
                 <label  >Postal Comm</label>
                 <input uppercase [disabled]="lvSection" type="text"  [(ngModel)]="attributes.postal_comm" >
-            </div>
+            </div> -->
             <br>
             <br>
             <div class="input-control text full-size">
