--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -178,7 +178,7 @@
                                   
                                 </div>
                                 <div class="tab-content-segment">
-                                        <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LETTER)" class="button">LETTER</button>
+                                        <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LETTER)" class="button rounded">LETTER</button>
                                 </div>
   
                             </div>
