fix displaying image on quick pick list.

--- a/src/app/quick-pick-list/quick-pick-list.component.html
+++ b/src/app/quick-pick-list/quick-pick-list.component.html
@@ -3,7 +3,7 @@
         <div id="piccontainer">
             <div class="image-container bordered">
                 <div class="frame">
-                  <img src="pick.src.data">
+                  <img [src]="pick.src">
                 </div>
               </div>
         </div>
