--- a/src/app/main-map/main-map.component.html
+++ b/src/app/main-map/main-map.component.html
@@ -1,8 +1,9 @@
 <div id="main" style="height: 100%"  ondragover="return false;"(dragenter)="handleDragEnter()"
       (dragleave)="handleDragLeave()"
       (drop)="handleDrop($event)">
-
-  <app-quick-pick-list [picks]="quickPickCollections" *ngIf="displayCollection"></app-quick-pick-list>
+  <app-search-address></app-search-address>
+  <app-identify-list (close)="displayIdentify = false;" [list]="mapService.identifyResponse" *ngIf="displayIdentify"></app-identify-list>
+  <app-quick-pick-list (remove)="removeQPick($event)" [picks]="quickPickCollections" *ngIf="displayCollection"></app-quick-pick-list>
 
 <div #map id="map"  ondragover="return false;">
   <div #base style="position: absolute;right: 0; z-index: 3000;" class="dropdown-button place-right">
