--- a/src/app/identify-list/identify-list.component.css
+++ b/src/app/identify-list/identify-list.component.css
@@ -1,13 +1,31 @@
 #container {
     position: absolute;
     left: 0;
-    width: 350px;
-    height: 70%;
+    width: 50%;
+    height: calc(100% - 190px);
     z-index: 4000;
     background: #303030;
     cursor: pointer;
     overflow: auto;
+    opacity: 0.3;
    
+}
+
+#arrow {
+    position: absolute;
+    left: -126px;
+    height: 50px;
+    z-index: 1000;
+    cursor: pointer;
+    display: none;
+   
+}
+#arrow:hover{
+    left: 0;
+}
+
+#container:hover{
+    opacity: 1;
 }
 
 #piccontainer{
