--- a/src/app/main-map/main-map.component.css
+++ b/src/app/main-map/main-map.component.css
@@ -4,6 +4,12 @@
     height: 100%;
     width: 100%
 }
+.baseStyle {
+  opacity: 0.3;
+}
+.baseStyle:hover{
+  opacity: 1;
+}
 
 
 /* File Uploader Styles  */
