--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,10 +1,13 @@
 <div style="width:100%;height:30px; background:transparent;">
         <div class="pull-right">
-                <button (click)="onLogOut()" class="button rounded">
-                        <i class="fa fa-sign-out"></i>
-                    <span class="caption">Log Out</span>
-                </button>
-              </div>
+                <div  style="position: absolute;right: 0; z-index: 3000;" class="dropdown-button place-right baseStyle">
+                        <button class="button rounded dropdown-toggle">Options</button>
+                        <ul class="split-content d-menu place-right" style="min-width: 0;" data-role="dropdown">
+                            <li><a (click)="onLogOut()">Log Out <i class="fa fa-sign-out"></i></a></li>
+                            <li><a (click)="toogleToolbar()">Collapse Toolbar</a></li>
+                        </ul>
+                </div>
+        </div>
   </div>
   
   <!-- <app-charm-online></app-charm-online> -->
@@ -13,11 +16,8 @@
   </div>
   
   <div  id="fluent-menu" class="fluent-menu" data-role="fluentmenu">
-        <div (click)="toogleToolbar()" style="position:absolute;right:0;z-index:3;">
-          <span *ngIf="expandShow" class="mif-expand-less" style="color:white;cursor:pointer;"></span>
-          <span *ngIf="!expandShow" class="mif-expand-more" style="color: white;cursor:pointer;"></span>
-        </div>
-                  <ul class="tabs-holder">
+        
+        <ul class="tabs-holder">
                       <li class="special ribbed-emerald" (click)="toogleCharm()" style="cursor: pointer"><a>Online</a></li>
                       <li *ngIf="_toolSettings.SECTIONS.TICKET.onoff" class="active"><a href="#tab_tickets">Ticket</a></li>
                       <li *ngIf="_toolSettings.SECTIONS.SUBDIVISION.onoff" class=""><a href="#tab_subdivision">Subdivision</a></li>
@@ -27,7 +27,7 @@
                       
                   </ul>
   
-                  <div  class="tabs-content">
+                  <div  class="tabs-content" >
                        
                       <div *ngIf="_toolSettings.SECTIONS.TICKET.onoff" class="tab-panel" id="tab_tickets" style="display: block;">
                           <div *ngIf="_toolSettings.SECTIONS.TICKET.VIEW.onoff" class="tab-panel-group">
