--- a/src/app/main-map/main-map.component.css
+++ b/src/app/main-map/main-map.component.css
@@ -1,9 +1,7 @@
 #map {
-
-    height: calc(100% - 190px);
-    width: 100%
+    height: 200px;
+    width: 100%;
 }
-
 
 /* File Uploader Styles  */
 h1{
