--- a/src/app/main-map/main-map.component.html
+++ b/src/app/main-map/main-map.component.html
@@ -1,14 +1,14 @@
 <div id="main" style="height: 100%"  ondragover="return false;"(dragenter)="handleDragEnter()"
       (dragleave)="handleDragLeave()"
       (drop)="handleDrop($event)">
-  <app-search-address></app-search-address>
+  <app-search-address (xysearch)="zoomToXY($event)" (selected)="zoomToSelected($event)"></app-search-address>
   <app-basemap (change)="changeBase($event)"></app-basemap>
   <app-identify-list (display)="zoomAndFlash($event)" (close)="displayIdentify = false;graphicLayer.clear();" [list]="mapService.identifyResponse" *ngIf="displayIdentify"></app-identify-list>
   <app-quick-pick-list (remove)="removeQPick($event)" [picks]="quickPickCollections" *ngIf="displayCollection"></app-quick-pick-list>
   <app-google-map2  [ngClass]="{'googleDisplay': displayGoogle, 'googleHide': !displayGoogle}"  [extent]="googleExtent" ></app-google-map2>
   
-  <div #map id="map" [ngClass]="{'googleHide': displayGoogle}"  ondragover="return false;">
-   
+  <div #map id="map" style="height: 200px;" [ngClass]="{'googleHide': displayGoogle}"  ondragover="return false;">
+    
   </div>
 
 </div>
