--- a/src/app/search-address/search-address.component.html
+++ b/src/app/search-address/search-address.component.html
@@ -1,7 +1,19 @@
 <div id="search">
   <div class="input-control text full-size" data-role="input">
      
-    <input auto-complete path-to-data="results" [(ngModel)]="myData" list-formatter="formatted_address" style="height: 38px;" [source]="googleGeoCode" type="text" >
-    <button class="button"><i aria-hidden="true" class="fa fa-search"></i></button>
+    <input auto-complete min-chars="3" (valueChanged)="myCallback($event)" path-to-data="results" [(ngModel)]="myData" list-formatter="suggestion" style="height: 37px;" [source]="googleGeoCode" type="text" >
+    <div class="button-group">
+      <button class="button"><i aria-hidden="true" class="fa fa-search"></i></button>
+      <button class="button" (click)="lat = !lat; lng = !lng;"><i class="fa fa-map-marker"></i></button>
+   </div>
+  </div>
+
+    <div *ngIf="lat" class="input-control text" data-role="input">
+      <input type="text" (keyup.enter)="enterSearch();" [(ngModel)]="latinput" placeholder="Lat"> 
+   </div>
+
+  <!-- Input with reveal helper -->
+  <div *ngIf="lng" class="input-control text" data-role="input">
+      <input type="text" (keyup.enter)="enterSearch();"  [(ngModel)]="lnginput" placeholder="Long">
   </div>
 </div>
