--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -308,7 +308,7 @@
                           </div>
                           <div class="tab-panel-group">
                              <div class="tab-group-content">
-                                <button    class="fluent-big-button">
+                                <button (click)="actionSendToolBar(app.toolbarActivies.MAP_MEASURE)"   class="fluent-big-button">
                                     <img src="assets/measuring-tool.png" alt="M">
                                     <span class="label">Measure</span>
                                 </button>
