updates fixes for google interaction

--- a/src/app/basemap/basemap.component.html
+++ b/src/app/basemap/basemap.component.html
@@ -1,4 +1,4 @@
-<div #base style="position: absolute;right: 0; z-index: 2500;" class="dropdown-button place-right baseStyle">
+<div id="base"  style="position: absolute;right: 0; z-index: 2500;" class="dropdown-button place-right baseStyle">
   <button class="button rounded dropdown-toggle">Basemaps</button>
   <ul class="split-content d-menu place-right" style="min-width: 0;" data-role="dropdown">
       <li><a (click)="changeBase(mapflex)">Original</a></li>
